...
  ]
)
let product3 = Product(
  id: 3,
  name: "Green midi skirt",
  price: 5.9,
  specification: "Women's Stretch Midi Pencil Green Skirt",
  imageURL: "/skirt_green.png",
  category: .clothes,
  reviews: [
    Review(text: "too small", rating: 3),
    Review(text: "nice one", imageURLs: ["/photo23342.jpeg", "/photo43728935.jpeg"], rating: 4)
  ]
...
