...
    ],
    categories: [
      ProductCategory(id: "women", title: "Women", subcategories: [
        ProductSubcategory(id: "coats", title: "Coats & Jackets"),
        ProductSubcategory(id: "tops", title: "Tops")
      ]),
      ProductCategory(id: "men", title: "Men", subcategories: [
        ProductSubcategory(id: "m_jeans", title: "Jeans"),
        ProductSubcategory(id: "suits", title: "Suits")
      ])
    ],
    colors: [
      "beige": "#F5F5DC",
      "white": "#FFFFFF",
      "black": "#000000",
      "red": "#FF0000",
      "blue": "#0000FF",
      "green": "#00FF00",
      "gray": "#808080",
      "navy blue": "#000080",
      "steel blue": "#4682B4",
...
